--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <div class="container">
     <h1 class="header__title visually-hidden">ООО Молочный комбинат "Каргопольский"</h1>
     <img class="header__logo" src="image/logo.svg" width="250" height="80" alt="ООО Молочный комбинат " Каргопольский"">
-    <a class="header_phone" href="tel:88184121892">8(81841)21892</a>
+    <div class="header__right">
+      <a class="header_in" href="#">Вход</a>
+      <a class="header_phone" href="tel:88184121895">8(81841)21895</a>
+    </div>
   </div>
 </header>
 <main class="main">
@@ -95,7 +98,10 @@
         ежедневно получать самый свежий натуральный продукт без лишних хлопот!</p>
       <ul class="catalog__list">
         <li class="catalog__item">
-          <img class="catalog__img" src="image/milk1.png" alt="">
+          <picture>
+            <source media="(min-width: 641px)" srcset="image/milk1.png">
+            <img class="catalog__img" src="image/milk1_320.png" alt="Молоко пастеризованное, обезжиренное. Жиры менее 0.5% ГОСТ">
+          </picture>
           <div class="catalog__block">
             <p class="catalog__text">Молоко пастеризованное, обезжиренное. Жиры менее 0.5% ГОСТ</p>
             <p class="catalog__price">1300 руб./мес.</p>
@@ -103,7 +109,10 @@
           </div>
         </li>
         <li class="catalog__item">
-          <img class="catalog__img" src="image/milk2.png" alt="">
+          <picture>
+            <source media="(min-width: 641px)" srcset="image/milk2.png">
+            <img class="catalog__img" src="image/milk2_320.png" alt="Молоко пастеризованное. Жиры 1.5% ГОСТ">
+          </picture>
           <div class="catalog__block">
             <p class="catalog__text">Молоко пастеризованное. Жиры 1.5% ГОСТ</p>
             <p class="catalog__price">1330 руб./мес.</p>
@@ -111,7 +120,10 @@
           </div>
         </li>
         <li class="catalog__item">
-          <img class="catalog__img" src="image/milk3.png" alt="">
+          <picture>
+            <source media="(min-width: 641px)" srcset="image/milk3.png">
+            <img class="catalog__img" src="image/milk3_320.png" alt="Молоко пастеризованное. Жиры 2.5% ГОСТ">
+          </picture>
           <div class="catalog__block">
             <p class="catalog__text">Молоко пастеризованное. Жиры 2.5% ГОСТ</p>
             <p class="catalog__price">1390 руб./мес.</p>
@@ -119,7 +131,10 @@
           </div>
         </li>
         <li class="catalog__item">
-          <img class="catalog__img" src="image/milk4.png" alt="">
+          <picture>
+            <source media="(min-width: 641px)" srcset="image/milk4.png">
+            <img class="catalog__img" src="image/milk4_320.png" alt="Молоко пастеризованное, цельное. Жиры 3.5-4.7% ГОСТ">
+          </picture>
           <div class="catalog__block">
             <p class="catalog__text">Молоко пастеризованное, цельное. Жиры 3.5-4.7% ГОСТ</p>
             <p class="catalog__price">1470 руб./мес.</p>
@@ -153,7 +168,8 @@
   <div class="container">
     <p class="footer__email footer__text">email: ka-mol0112@rambler.ru</p>
     <a class="footer_phone footer__text" href="tel:88184121892">Телефон: 8 (81841) 21895</a>
-    <p class="footer__address footer__text">164110, Архангельская обл., Каргопольский р-н, г. Каргополь, пр. Октябрьский,
+    <p class="footer__address footer__text">164110, Архангельская обл., Каргопольский р-н, г. Каргополь, пр.
+      Октябрьский,
       112</p>
   </div>
 </footer>
