--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 <header class="header">
   <div class="container">
-    <h1 class="header__title visually-hidden">ООО Молочный комбинат "Каргопольский"</h1>
-    <img class="header__logo" src="image/logo.svg" width="250" height="80" alt="ООО Молочный комбинат " Каргопольский"">
+    <h1 class="header__title visually-hidden">ООО Молочный комбинат &quot;Каргопольский&quot;</h1>
+    <a class="header__logo logo"><img class="logo__img" src="image/logo.svg" width="280" height="80"
+                                      alt="ООО Молочный комбинат &quot;Каргопольский&quot;"></a>
     <div class="header__right">
       <a class="header_in" href="#">Вход</a>
       <a class="header_phone" href="tel:88184121895">8(81841)21895</a>
@@ -26,6 +27,7 @@
       <h2 class="slogan__header visually-hidden">Наши преимущества</h2>
       <p class="slogan__title">Вкусное и свежее молоко с доставкой на дом!</p>
       <p class="slogan__text">Быстро и очень аккуратно доставим молоко до вашего дома.</p>
+      <a href="#" class="slogan__button button">Подписаться на доставку</a>
     </div>
   </section>
   <section class="why-work">
@@ -100,7 +102,8 @@
         <li class="catalog__item">
           <picture>
             <source media="(min-width: 641px)" srcset="image/milk1.png">
-            <img class="catalog__img" src="image/milk1_320.png" alt="Молоко пастеризованное, обезжиренное. Жиры менее 0.5% ГОСТ">
+            <img class="catalog__img" src="image/milk1_320.png"
+                 alt="Молоко пастеризованное, обезжиренное. Жиры менее 0.5% ГОСТ">
           </picture>
           <div class="catalog__block">
             <p class="catalog__text">Молоко пастеризованное, обезжиренное. Жиры менее 0.5% ГОСТ</p>
@@ -133,7 +136,8 @@
         <li class="catalog__item">
           <picture>
             <source media="(min-width: 641px)" srcset="image/milk4.png">
-            <img class="catalog__img" src="image/milk4_320.png" alt="Молоко пастеризованное, цельное. Жиры 3.5-4.7% ГОСТ">
+            <img class="catalog__img" src="image/milk4_320.png"
+                 alt="Молоко пастеризованное, цельное. Жиры 3.5-4.7% ГОСТ">
           </picture>
           <div class="catalog__block">
             <p class="catalog__text">Молоко пастеризованное, цельное. Жиры 3.5-4.7% ГОСТ</p>
@@ -150,23 +154,26 @@
         <h2 class="experiment__header main__header">Рекомендуем попробовать</h2>
         <p class="experiment__description">Наше молоко можно пить сразу или изготовить из него домашние кисломолочные
           продукты.</p>
-        <p class="experiment__text">
-          1. Если выпить на ночь стакан теплого молока, то ваш сон станет более спокойным и глубоким.
-        </p>
-        <p class="experiment__text">
-          2. Молоко обязательно нужно хранить в тёмном месте, так как на свету из состава молока улетучиваются витамины.
-        </p>
-        <p class="experiment__text">
-          3. Пить молоко нужно маленькими глотками, медленно. То молоко, которое вы выпьете быстро и большими глотками,
-          свернётся в комки, которые трудно будет переварить вашему желудку.
-        </p>
+        <ol class="experiment__list">
+          <li class="experiment__item">
+            Если выпить на ночь стакан теплого молока, то ваш сон станет более спокойным и глубоким.
+          </li>
+          <li class="experiment__item">
+            Молоко обязательно нужно хранить в тёмном месте, так как на свету из состава молока улетучиваются витамины.
+          </li>
+          <li class="experiment__item">
+            Пить молоко нужно маленькими глотками, медленно. То молоко, которое вы выпьете быстро и большими глотками,
+            свернётся в комки, которые трудно будет переварить вашему желудку.
+          </li>
+        </ol>
       </div>
     </div>
   </section>
 </main>
 <footer class="footer">
   <div class="container">
-    <p class="footer__email footer__text">email: ka-mol0112@rambler.ru</p>
+
+    <p class="footer__email footer__text">email: <a class="footer__link" href="mailto:ka-mol0112@rambler.ru">ka-mol0112@rambler.ru</a></p>
     <a class="footer_phone footer__text" href="tel:88184121892">Телефон: 8 (81841) 21895</a>
     <p class="footer__address footer__text">164110, Архангельская обл., Каргопольский р-н, г. Каргополь, пр.
       Октябрьский,
