--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <li class="profit__item profit__item--health">
             <h3 class="profit__title main__title">Основа здорового питания</h3>
             <p class="profit__text">
-              Содержит целый комплекс витаминов и микроэлементов
+              Содержит целый комплекс витаминов и микроэлементов.
             </p>
           </li>
         </ul>
